<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_img"
    tools:context=".Splash2Activity">

    <TextView
        android:id="@+id/fast_delivery_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="@font/montserrat_bold"
        android:foregroundTint="@color/colorAccent"
        android:hapticFeedbackEnabled="true"
        android:text="@string/fastest_delivery"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:transitionName="splashText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.172" />

    <ImageView
        android:id="@+id/fast_delivery_img"
        android:layout_width="330dp"
        android:layout_height="279dp"
        android:contentDescription="@string/delivery_splash_image"
        android:transitionName="splashImage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fast_delivery_text"
        app:layout_constraintVertical_bias="0.158"
        app:srcCompat="@drawable/scootr_img_02" />

    <ImageView
        android:id="@+id/pagination2"
        android:layout_width="49dp"
        android:layout_height="17dp"
        android:contentDescription="@string/pagination_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splash2_text"
        app:layout_constraintVertical_bias="0.973"
        app:srcCompat="@drawable/pagination2" />

    <ImageButton
        android:id="@+id/bt_next2"
        android:layout_width="46dp"
        android:layout_height="22dp"
        android:background="@drawable/next"
        android:contentDescription="@string/next_button"
        android:onClick="next2"
        android:transitionName="button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.807"
        app:layout_constraintStart_toEndOf="@+id/pagination2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.971" />

    <TextView
        android:id="@+id/splash2_text"
        android:layout_width="302dp"
        android:layout_height="143dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/get_it_fast_with_your_food_lovers_account_order_online_from_top_food_restaurants_in_your_locality"
        android:textAlignment="center"
        android:textColor="#3D3E3E"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fast_delivery_img"
        app:layout_constraintVertical_bias="0.283" />

</androidx.constraintlayout.widget.ConstraintLayout>