<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_img"
    tools:context=".SplashFinalActivity">

    <TextView
        android:id="@+id/easy_payment_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="@font/montserrat_bold"
        android:foregroundTint="@color/colorAccent"
        android:hapticFeedbackEnabled="true"
        android:text="@string/easy_payment_options"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:transitionName="splashText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.172" />

    <ImageView
        android:id="@+id/wallet_img"
        android:layout_width="330dp"
        android:layout_height="279dp"
        android:contentDescription="@string/wallet_splash_image"
        android:transitionName="splashImage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/easy_payment_text"
        app:layout_constraintVertical_bias="0.158"
        app:srcCompat="@drawable/wallet_img_03" />


    <TextView
        android:id="@+id/splash_text_final"
        android:layout_width="317dp"
        android:layout_height="62dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/easy_payment_options_like_cash_card_and_online_payment"
        android:textAlignment="center"
        android:textColor="#3D3E3E"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wallet_img"
        app:layout_constraintVertical_bias="0.283" />

    <Button
        android:id="@+id/bt_getStarted"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="247dp"
        android:layout_height="77dp"
        android:background="@drawable/button"
        android:elegantTextHeight="true"
        android:fontFamily="@font/roboto_medium"
        android:lineSpacingExtra="8sp"
        android:onClick="getStarted"
        android:text="@string/get_started"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="#FFFFFFFF"
        android:textSize="24sp"
        android:transitionName="button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splash_text_final"
        app:layout_constraintVertical_bias="0.482" />

</androidx.constraintlayout.widget.ConstraintLayout>