<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_img"
    tools:context=".Activities.SignInActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="587dp"
        android:background="@drawable/white_bord"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/signIn_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/sign_in"
            android:textColor="#000000"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.134"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.095" />

        <TextView
            android:id="@+id/signIn_txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/montserrat_bold"
            android:onClick="forgotPass"
            android:text="@string/forgot_password"
            android:textColor="#999999"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.808"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pass_editTxt_signup"
            app:layout_constraintVertical_bias="0.066" />

        <TextView
            android:id="@+id/new_acc_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/didn_t_have_an_account"
            android:textColor="#999999"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.446"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_signup_signup" />

        <TextView
            android:id="@+id/signUp_link_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/roboto_medium"
            android:onClick="signUp"
            android:text="@string/sign_up"
            android:textColor="#FF9D1E"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/new_acc_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.102"
            app:layout_constraintStart_toEndOf="@+id/new_acc_txt"
            app:layout_constraintTop_toTopOf="@+id/new_acc_txt" />

        <EditText
            android:id="@+id/username_editTxt_signup"
            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
            android:layout_width="307dp"
            android:layout_height="51dp"
            android:autoSizeMaxTextSize="18sp"
            android:background="@drawable/email_box"
            android:clickable="false"
            android:ems="10"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textColor="#999999"
            android:textColorHint="#E3E3E3"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.292" />

        <EditText
            android:id="@+id/pass_editTxt_signup"
            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
            android:layout_width="307dp"
            android:layout_height="51dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/email_box"
            android:ems="10"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="#999999"
            android:textColorHint="#E3E3E3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/username_editTxt_signup"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/username_editTxt_signup"
            app:layout_constraintTop_toBottomOf="@+id/username_editTxt_signup"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/bt_signup_signup"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="142dp"
            android:layout_height="58dp"
            android:layout_gravity="center_vertical"
            android:alpha="1"
            android:background="@drawable/button_style"
            android:enabled="false"
            android:fontFamily="@font/montserrat_semibold"
            android:includeFontPadding="false"
            android:lineSpacingExtra="0sp"
            android:onClick="signIn"
            android:paddingTop="-50dp"
            android:text="@string/sign_in"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:verticalScrollbarPosition="defaultPosition"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pass_editTxt_signup"
            app:layout_constraintVertical_bias="0.351" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.453"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.592"
        app:srcCompat="@drawable/logo" />
</androidx.constraintlayout.widget.ConstraintLayout>